          [HKCU\Software\Gabest\Media Player Classic\Filters]
 CHANGED: Improved the OSD message when changing the playback speed
 CHANGED: Ticket #519, Replace the "Next (Previous) Playlist Item" command by a
          "Next (Previous) File" command which can also be used to play the next
          (previous) file in folder without stopping at chapters.
 CHANGED: Ticket #846, Use a different program id for x64 builds so that there
          is no conflict over file associations between x86 and x64 builds.
 CHANGED: Updated libpng to v1.5.4
 CHANGED: Updated MediaInfoLib to v0.7.46
 CHANGED: Updated ZenLib to v0.4.20
 CHANGED: Updated SoundTouch to v1.5.1pre r104
 CHANGED: Updated Little CMS to v2.2
 CHANGED: Updated libdca to SVN r90
 CHANGED: Updated German, Ukrainian, Turkish, Russian, Hungarian translation
 FIXED  : Ticket #20, [MKV] 2 or more video streams get played back simultaneously
          on top of each other
 FIXED  : Ticket #71, [MPEG] LPCM mono causes 50% playback speed
 FIXED  : Ticket #199, [MpegSplitter] no video with some files
 FIXED  : Ticket #285, Ambarella AVC not correctly splitted by MPC-HC's internal
          MP4/MOV source filter
 FIXED  : Ticket #384, disable Relative drive
 FIXED  : Ticket #613, Bugs of MPC-HC Dialog Fonts
 FIXED  : Ticket #622, Favorites are now correctly saved when changing settings
          location from registry to ini and vice versa.
 FIXED  : Ticket #740, Make EVR Sync stats better looking
 FIXED  : Ticket #760, Fixed playback of old .mov files with 'raw', 'twos' and 'ima4' audio
 FIXED  : Ticket #805, EVR Custom scanline and refresh rate detection fails occasionally,
          causing superspeed video
 FIXED  : Ticket #829, MPC-HC plays recent BBC HD recordings with no video
 FIXED  : Ticket #965, Add Full File Path Parameter to Status.html
 FIXED  : Ticket #989, Sliders at options are consistent with volume slider.
          Scroll/button up will move slider up (increase the value) while going